initialize camera and mic

--- a/index.html
+++ b/index.html
@@ -153,7 +153,14 @@
 
     <script>
 
-
+        $(document).ready(function(){
+            if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+                // Not adding `{ audio: true }` since we only want video now
+                navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then(function(stream) {
+                    
+                });
+            }
+        });
     </script>
 </body>
 
